chore: updated build tasks to begin separating tasks into individual files.

--- a/src/index.html
+++ b/src/index.html
@@ -46,11 +46,11 @@
     </div>
     </div>
 </main>
-
 <footer>
     <p>&copy; Web Performance 2014 <span id="crp-stats"></span></p>
 </footer>
+
 <script async defer src="https://maps.googleapis.com/maps/api/js"></script>
-<script src="js/bundle.js"></script>
+<script src="js/bundle.min.js"></script>
 </body>
 </html>
