chore: cleaned up the gulp tasks.

--- a/src/index.html
+++ b/src/index.html
@@ -6,19 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Udacity Front-End Nanodegree • Project 5 Cooperstown</title>
 
-    <style>
-        * {
-            /* outline: 1px solid red !important; */
-        }
-
-        .container {
-            width: 100%;
-        }
-    </style>
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-    <link rel="stylesheet" href="css/vendor/normalize.css">
-    <link rel="stylesheet" href="css/vendor/bootstrap.min.css">
+
+    <!-- build:css css/project.css -->
+    <link rel="stylesheet" href="../node_modules/normalize.css/normalize.css">
+    <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="css/main.css">
+    <!-- endbuild -->
     <script async src="js/perfmatters.js"></script>
 </head>
 <body>
