--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,7 @@
         <div id="markers" class="markers-container" data-bind="visible: filteredPlaces().length > 0">
             <ul data-bind="foreach: filteredPlaces">
                 <li class="searchBar_ul_li" data-bind="click: $root.focusLocation, css: { selected: isSelected }">
-                    <div class="searchBar_ul_li_name"><a data-bind="attr: { href: url, title: name }, text: name"></a></div>
+                    <div class="searchBar_ul_li_name"><a target="_blank" data-bind="attr: { href: url, title: name }, text: name"></a></div>
                     <div class="searchBar_ul_li_distance" data-bind="if: distanceToDP">Distance to DP: <!--ko text: distanceToDP--><!--/ko--></div>
                     <div class="searchBar_ul_li_duration" data-bind="if: travelTimeToDP">Travel Time to DP: <!--ko text: travelTimeToDP--><!--/ko--></div>
                 </li>
