--- a/src/index.html
+++ b/src/index.html
@@ -22,32 +22,32 @@
 
         <p>Dreamspark</p>
     </div>
-    <label data-bind="click:toggleSearchBar" class="search-icon">&#9776;</label>
+    <label class="search-icon">&#9776;</label>
 </header>
-<main>
-    <div class="wrapper-map">
-    <div id="searchBar" data-bind="visible: searchBarVisible">
-        <input id="filter-markers" type="search" placeholder="Filter Markers" data-bind="value: placeFilter, valueUpdate: 'afterkeydown'">
-
-        <div id="markers" class="markers-container" data-bind="visible: filteredPlaces().length > 0">
+<main class="clearfix">
+    <div id="left-sidebar">
+        <div id="searchBar">
+            <input id="filter-markers" type="search" placeholder="Filter Markers" data-bind="value: filter, valueUpdate: 'afterkeydown'">
+        </div>
+        <div id="markers" class="markers-container">
             <ul data-bind="foreach: filteredPlaces">
                 <li class="searchBar_ul_li" data-bind="click: $root.focusLocation, css: { selected: isSelected }">
-                    <div class="searchBar_ul_li_name"><a target="_blank" data-bind="attr: { href: url, title: name }, text: name"></a></div>
-                    <div class="searchBar_ul_li_distance" data-bind="if: distanceToDP">Distance to DP: <!--ko text: distanceToDP--><!--/ko--></div>
-                    <div class="searchBar_ul_li_duration" data-bind="if: travelTimeToDP">Travel Time to DP: <!--ko text: travelTimeToDP--><!--/ko--></div>
+                    <div class="searchBar_ul_li_name"><a target="_blank" data-bind="attr: { href: website, title: name }, text: name"></a></div>
                 </li>
             </ul>
         </div>
     </div>
-    <div id="map">
-    </div>
+    <div class="wrapper-map">
+        <div id="map">
+        </div>
     </div>
 </main>
 <footer>
     <p>&copy; Web Performance 2014 <span id="crp-stats"></span></p>
 </footer>
 
-<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAPOgwyxo3y_6PaY200JDqzCMH8vgxwUUk&libraries=places,geometry"></script>
+<!-- <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAPOgwyxo3y_6PaY200JDqzCMH8vgxwUUk&libraries=places,geometry"></script> -->
+<script async defer src="https://maps.googleapis.com/maps/api/js?&libraries=places,geometry"></script>
 <script src="js/bundle.min.js"></script>
 </body>
 </html>
