--- a/src/index.html
+++ b/src/index.html
@@ -30,11 +30,13 @@
             <input id="filter-markers" type="search" placeholder="Filter Markers" data-bind="value: filter, valueUpdate: 'afterkeydown'">
         </div>
         <div id="cooperstown-list" class="cooperstown-container">
+            <h5 class="cooperstown-list-label">Suggested Places</h5>
             <ul data-bind="foreach: filteredPlaces">
-                <li class="ctown_ul_li" data-bind="click: $root.focusLocation, css: { selected: isSelected }">
+                <li class="ctown_ul_li" data-bind="click: $parent.focusLocation.bind($parent), css: { selected: isSelected }">
                     <div class="ctown_ul_li_name"><a target="_blank" data-bind="attr: { href: website, title: name }, text: name"></a></div>
                 </li>
             </ul>
+            <h5 class="cooperstown-list-label">Google Suggestions</h5>
         </div>
         <div id="places-list" class="places-container no-results">
             <ul>
