--- a/src/index.html
+++ b/src/index.html
@@ -34,6 +34,7 @@
             <ul data-bind="foreach: filteredPlaces">
                 <li class="ctown_ul_li" data-bind="click: $parent.focusLocation.bind($parent), css: { selected: isSelected }">
                     <div class="ctown_ul_li_name"><a target="_blank" data-bind="attr: { href: website, title: name }, text: name"></a></div>
+                    <div class="ctown_ul_li_distance" data-bind="text: distanceToDreamsPark"></div>
                 </li>
             </ul>
             <h5 class="cooperstown-list-label">Google Suggestions</h5>
