--- a/src/index.html
+++ b/src/index.html
@@ -30,18 +30,21 @@
             <input id="filter-markers" type="search" placeholder="Filter Markers" data-bind="value: filter, valueUpdate: 'afterkeydown'">
         </div>
         <div id="cooperstown-list" class="cooperstown-container">
-            <h5 class="cooperstown-list-label">Suggested Places</h5>
+            <h5 class="cooperstown-list-label" data-bind="visible: filteredPlaces().length">Suggested Places</h5>
             <ul data-bind="foreach: filteredPlaces">
                 <li class="ctown_ul_li" data-bind="click: $parent.focusLocation.bind($parent), css: { selected: isSelected }">
                     <div class="ctown_ul_li_name"><a target="_blank" data-bind="attr: { href: website, title: name }, text: name"></a></div>
                     <div class="ctown_ul_li_distance" data-bind="text: distanceToDreamsPark"></div>
                 </li>
             </ul>
-            <h5 class="cooperstown-list-label">Google Suggestions</h5>
         </div>
         <div id="places-list" class="places-container no-results">
-            <ul>
-                <li></li>
+            <h5 class="cooperstown-list-label" data-bind="visible: googlePlaces().length">Google Suggestions</h5>
+            <ul data-bind="foreach: googlePlaces">
+                <li>
+                    <div class="ctown_ul_li_name" data-bind="text: name"></div>
+                    <div class="ctown_ul_li_distance" data-bind="text: distanceToDreamsPark"></div>
+                </li>
             </ul>
         </div>
     </div>
