checkpoint to save state.

--- a/src/index.html
+++ b/src/index.html
@@ -60,8 +60,7 @@
     <p>&copy; Web Performance 2014 <span id="crp-stats"></span></p>
 </footer>
 
-<!-- <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAPOgwyxo3y_6PaY200JDqzCMH8vgxwUUk&libraries=places,geometry"></script> -->
-<script async defer src="https://maps.googleapis.com/maps/api/js?&libraries=places,geometry"></script>
+<script async src="https://maps.googleapis.com/maps/api/js?&libraries=places,geometry"></script>
 <script src="js/bundle.min.js"></script>
 </body>
 </html>
