--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
 
         <p>Dreamspark</p>
     </div>
-    <!-- <label class="search-icon">&#9776;</label> -->
+    <label class="menu-icon">&#9776;</label>
     <div id="weather-container">
         <div id="weather" data-bind="foreach: weather">
             <div class="weather-day">
@@ -75,7 +75,3 @@
 <script src="js/bundle.min.js"></script>
 </body>
 </html>
-
-<!--
-
--->
