--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
     </div>
     <label class="menu-icon">&#9776;</label>
     <div id="weather-container">
-        <div id="weather" data-bind="foreach: weather">
+        <div id="weather" data-bind="foreach: cooperstownWeather">
             <div class="weather-day">
                 <img data-bind="attr: {src: icon}" />
                 <div class="weather-date" data-bind="text: date"></div>
