feat: Moved googlePlaces and searchBox into the cooperstownModel

--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,7 @@
 <main class="clearfix">
     <div id="left-sidebar">
         <div id="searchBar">
-            <input id="filter-markers" type="search" placeholder="Filter Markers" data-bind="value: filter, valueUpdate: 'afterkeydown'">
+            <input id="filter-markers" type="search" placeholder="Filter Markers" data-bind="value: filter, valueUpdate: 'input'">
 
         </div>
         <div id="cooperstown-list" class="cooperstown-container">
