Cleaned up structure and css

--- a/src/index.html
+++ b/src/index.html
@@ -16,13 +16,50 @@
     <script async src="js/perfmatters.js"></script>
 </head>
 <body>
+<div id="container">
 <header>
     <div id="brand">
-        <h2>Cooperstown, New York</h2>
+        <h2>Cooperstown</h2>
 
         <p>Dreamspark</p>
     </div>
+    <div id="searchBar">
+        <input id="filter-markers" type="search" placeholder="Search Cooperstown" data-bind="value: filter, valueUpdate: 'input'">
+
+    </div>
+
     <label class="menu-icon">&#9776;</label>
+</header>
+
+<div class="wrapper-map">
+    <div id="map">
+    </div>
+</div>
+
+<main class="clearfix">
+    <div id="left-sidebar">
+
+        <div id="cooperstown-list" class="cooperstown-container">
+            <h5 class="cooperstown-list-label" data-bind="visible: filteredPlaces().length">Suggested Places</h5>
+            <ul data-bind="foreach: filteredPlaces">
+                <li class="ctown_ul_li" data-bind="click: $parent.focusLocation.bind($parent), css: { selected: isSelected }">
+                    <div class="ctown_ul_li_name"><a target="_blank" data-bind="text: name"></a></div>
+                    <div class="ctown_ul_li_distance" data-bind="text: distanceToDreamsPark"></div>
+                </li>
+            </ul>
+        </div>
+
+        <div id="places-list" class="places-container no-results">
+            <h5 class="cooperstown-list-label" data-bind="visible: googlePlaces().length">Google Suggestions</h5>
+            <ul class="ctown_ul" data-bind="foreach: googlePlaces">
+                <li class="ctown_ul_li" data-bind="click: $parent.focusLocation.bind($parent), css: { selected: isSelected }">
+                    <div class="ctown_ul_li_name" data-bind="text: name"></div>
+                    <div class="ctown_ul_li_add" data-bind="click: $parent.addLocation.bind($parent)">Save Location</div>
+                    <div class="ctown_ul_li_distance" data-bind="text: distanceToDreamsPark"></div>
+                </li>
+            </ul>
+        </div>
+    </div>
     <div id="weather-container">
         <div id="weather" data-bind="foreach: cooperstownWeather">
             <div class="weather-day">
@@ -35,42 +72,11 @@
         </div>
     </div>
 
-</header>
-<main class="clearfix">
-    <div id="left-sidebar">
-        <div id="searchBar">
-            <input id="filter-markers" type="search" placeholder="Filter Markers" data-bind="value: filter, valueUpdate: 'input'">
-
-        </div>
-        <div id="cooperstown-list" class="cooperstown-container">
-            <h5 class="cooperstown-list-label" data-bind="visible: filteredPlaces().length">Suggested Places</h5>
-            <ul data-bind="foreach: filteredPlaces">
-                <li class="ctown_ul_li" data-bind="click: $parent.focusLocation.bind($parent), css: { selected: isSelected }">
-                    <div class="ctown_ul_li_name"><a target="_blank" data-bind="text: name"></a></div>
-                    <div class="ctown_ul_li_distance" data-bind="text: distanceToDreamsPark"></div>
-                </li>
-            </ul>
-        </div>
-        <div id="places-list" class="places-container no-results">
-            <h5 class="cooperstown-list-label" data-bind="visible: googlePlaces().length">Google Suggestions</h5>
-            <ul class="ctown_ul" data-bind="foreach: googlePlaces">
-                <li class="ctown_ul_li" data-bind="click: $parent.focusLocation.bind($parent), css: { selected: isSelected }">
-                    <div class="ctown_ul_li_name" data-bind="text: name"></div>
-                    <div class="ctown_ul_li_add" data-bind="click: $parent.addLocation.bind($parent)">Save Location</div>
-                    <div class="ctown_ul_li_distance" data-bind="text: distanceToDreamsPark"></div>
-                </li>
-            </ul>
-        </div>
-    </div>
-    <div class="wrapper-map">
-        <div id="map">
-        </div>
-    </div>
 </main>
 <footer>
     <p>&copy; Web Performance 2014 <span id="crp-stats"></span></p>
 </footer>
-
+</div>
 <script async src="https://maps.googleapis.com/maps/api/js?&libraries=places,geometry"></script>
 <script src="js/bundle.min.js"></script>
 </body>
