Trying to fix Google Maps API Issue.

--- a/src/index.html
+++ b/src/index.html
@@ -85,7 +85,7 @@
     var map = document.getElementById('map');
     map.innerHTML = '<div class="map-load-error"><h1>Loading...</h1></div>';
 </script>
-<script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBQvxj_-y-6lW2v6jWyJH2uoa2PJ38yN2A&libraries=places,geometry"></script>
+<script async src="https://maps.googleapis.com/maps/api/js?&libraries=places,geometry"></script>
 <script async src="js/bundle.min.js"></script>
 </body>
 </html>
