Adding in oauthsignature

--- a/src/index.html
+++ b/src/index.html
@@ -90,6 +90,7 @@
 <!-- <script src="https://cdn.firebase.com/js/client/2.4.1/firebase.js"></script> -->
 
 <!-- build:js js/project.js -->
+<script async src="js/lib/oauth-signature.js"></script>
 <script async src="js/lib/firebase.js"></script>
 <script async src="js/lib/jquery.js"></script>
 <script async src="js/lib/knockout-latest.debug.js"></script>
